# jinja-tree-checker

./: .gitignore  README.md  pyproject.toml
jinja_tree_checker/: __init__.py
src/jinja_tree_checker/: main.py
test/test_project/: dbt_project.yml  pyproject.toml
