[project]
name = "jinja-tree-checker"
version = "0.1.0-dev"
description = "AST type checker for Jinja templates and macros"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.19.0",
    "tree-sitter-jinja2>=0.1.0a1",
]

[tool.uv.workspace]
members = [
    "test/test_project",
]
